discussion/kv_engine/165105/165105_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49207: Set cas on temp items

Change-Id: Iff7b9118f6839b7d7590e189c46c6650385c3dff

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-04 17:07:17.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-04 17:20:03.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35297/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35297/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41569/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/vbucket.cc(3825): error C2065: "vb": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41569/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13815/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3825:15: error: use of undeclared identifier "vb" [clang-diagnostic-error]
    v->setCas(vb.nextHLCCas());
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13815/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13815/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3449/ : FAILURE

Compile error at [2021-11-04T17:08:31.576Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3449/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16398/ : FAILURE

Compile error at [2021-11-04T17:11:24.842Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16398/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15713/ : FAILURE

Compile error at [2021-11-04T17:13:34.365Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: ?vb? was not declared in this scope; did you mean ?cb??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15713/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15430/ : FAILURE

Compile error at [2021-11-04T17:11:23.309Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: ?vb? was not declared in this scope; did you mean ?cb??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15430/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14592/ : FAILURE

Compile error at [2021-11-04T17:11:10.161Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14592/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23768/ : FAILURE

Compile error at [2021-11-04T17:14:46.753Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: use of undeclared identifier "vb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3521/ : FAILURE

Compile error at [2021-11-04T17:13:17.709Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@2/kv_engine/engines/ep/src/vbucket.cc:3825:15:
error: ?vb? was not declared in this scope; did you mean ?cb??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3521/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12616/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
